--- a/.github/workflows/main_fly-me-app.yml
+++ b/.github/workflows/main_fly-me-app.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - fly-me-app
+name: Test, build and deploy Python app to Azure Web App - fly-me-app
 
 on:
   push:
@@ -11,6 +11,34 @@ on:
   workflow_dispatch:
 
 jobs:
+  test:
+    name: OTP ${{matrix.otp}}
+    runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        otp: [21.3, 22.2]
+    steps:
+      # https://github.com/marketplace/actions/checkout
+      - name: CHECKOUT REPOSITORY
+        uses: actions/checkout@v2
+      # https://github.com/marketplace/actions/setup-elixir
+      - name: CONFIGURE OTP & ELIXIR
+        uses: actions/setup-elixir@v1
+        with:
+          otp-version: ${{matrix.otp}}
+          # https://github.com/elixir-lang/elixir/releases
+          elixir-version: 1.10.2
+      - name: RUN TESTS
+        run: |
+          time make tests
+      - name: ON FAILURE, CAPTURE TESTS LOGS AS ARTIFACT
+        # https://github.com/marketplace/actions/upload-artifact
+        uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: tests-logs-OTPv${{matrix.otp}}
+          path: logs
+
   build:
     runs-on: ubuntu-latest
 
