--- a/.github/workflows/main_fly-me-app.yml
+++ b/.github/workflows/main_fly-me-app.yml
@@ -39,6 +39,12 @@ jobs:
           path: |
             . 
             !venv/
+      - name: Sample Azure action
+        env: # Or as an environment variable
+          INSIGHTS_KEY: ${{ secrets.INSIGHTS_KEY }}
+          LUIS_HOST: ${{ secrets.LUIS_HOST }}
+          LUIS_ID: ${{ secrets.LUIS_ID }}
+          LUIS_KEY: ${{ secrets.LUIS_KEY }}
       - name: Test with pytest
         run: |
           pytest
